--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "next": "15.1.2",
     "primereact": "^10.8.5",
     "react": "^19.0.0",
