--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/AppFeature.jsx", "app/components/AppScreen.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/AppFeature.jsx", "app/components/AppScreen.jsx", "app/components/DesktopView.jsx", "app/components/FrameView.jsx"],
   "exclude": ["node_modules"]
 }
